# tech-bloom

./: .gitignore  Makefile  README.md  pyproject.toml  test.ipynb
src/: main.py
tests/: test_main.py
