[tool.poetry]
name = "f-lab-python-backend-project-template"
version = "0.1.0"
description = ""
authors = ["ydrah <ydrah@f-lab.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pycln = "^2.3.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
